--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,3 +18,6 @@ markdown_extensions:
   - def_list
   - pymdownx.tasklist:
       custom_checkbox: true
+  - admonition
+  - pymdownx.details
+  - pymdownx.superfences
